--- a/src/views/main/index.scss
+++ b/src/views/main/index.scss
@@ -1,5 +1,10 @@
 @import '~antd/dist/antd.dark.css';
 
+.ant-breadcrumb {
+  margin: 0 0 8px;
+  font-size: 16px;
+}
+
 .ant-tag {
   font-size: 14px;
 }
